# AVThrift_backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
cart/: __init__.py  admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_remove_cartitem_reservation_id_cartitem_reservation.py  0003_guest_carts.py
cart/tests/: __init__.py  factories.py  test_cart_api.py  test_cart_api_errors.py  test_cart_concurrency.py  test_cart_permissions.py  test_cart_services.py  test_cart_throttling.py  test_checkout_idempotency.py  test_constraints.py  test_guest_cart_api.py  (+1 more)
catalog/: admin.py  admin_serializers.py  admin_urls.py  admin_views.py  apps.py  models.py  selectors.py  serializers.py  services.py  tests.py  throttling.py  urls.py  views.py
common/: choices.py
config/: __init__.py  asgi.py  health.py  logging.py  urls.py  wsgi.py
customer/: __init__.py  admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
inventory/: __init__.py  admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
orders/: admin.py  emails.py  models.py  serializers.py  services.py  urls.py  views.py
users/: account_urls.py  admin.py  admin_urls.py  apps.py  auth_urls.py  logging.py  models.py  serializers.py  services.py  tokens.py  urls.py  views.py
(+67 files in other folders)
